Make the managed attributes the directory's own, and write to it
I built the last one wrong. The values sat in a table here, which meant an
edit changed a copy nobody outside this application could see - and the
attributes a team keeps on a server are attributes of the entry, held in
the directory, read by everything else that talks to it.

So a definition now names the LDAP attribute it manages. The values are
read from the entry when a page asks and written back to it with a modify
when somebody changes one. Nothing is kept here in between: an attribute
that can be edited in two places is one that will disagree with itself. The
local value table goes, and with it the rules that only made sense while we
owned the values - an option in use, a narrowing to one - because what a
directory holds is not ours to bound retroactively.

What is defined here is the shape a value should take, which the schema
does not say: that ATOStatus is one of four words rather than free text,
that a flag is a flag. That is checked before anything goes out. The
directory's own schema and access control still have the last word, and
what it refuses comes back as it was refused.

A boolean is TRUE on the entry, or the attribute absent - a directory has
no attribute that is present and empty - so clearing anything removes it.
Writes go out as a single replace, because the page edits an attribute as a
whole and a half-applied change to who is responsible for a server is worse
than a refused one. The entry is read back afterwards and put through the
path a sweep uses, so a managed attribute that is also a cached column
matches without waiting for the next sweep.

Taking an attribute off the list stops it being offered here and leaves the
directory alone. The tests are against a real directory and assert on the
entry rather than on anything we stored, because storing it is exactly what
this is not doing any more.

The stand-in directory grants the service account write on the attributes
it makes